--- a/package.json
+++ b/package.json
@@ -10,13 +10,13 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro-icon": "^1.1.5",
-    "astro-icons": "^0.1.3"
+    "sharp": "^0.34.3"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.16",
     "@tailwindcss/vite": "^4.1.11",
     "astro": "^5.12.4",
+    "astro-icon": "^1.1.5",
     "daisyui": "^5.0.50",
     "tailwindcss": "^4.1.11"
   }
