--- a/package.json
+++ b/package.json
@@ -1,23 +1,22 @@
 {
-  "name": "paulstenn",
-  "type": "module",
-  "version": "0.0.1",
-  "packageManager": "pnpm@10.9.0",
-  "scripts": {
-    "dev": "astro dev & chromium-browser http://localhost:4321 2> /dev/null",
-    "build": "astro build",
-    "preview": "astro preview",
-    "astro": "astro"
-  },
-  "dependencies": {
-    "sharp": "^0.34.3"
-  },
-  "devDependencies": {
-    "@tailwindcss/typography": "^0.5.16",
-    "@tailwindcss/vite": "^4.1.11",
-    "astro": "^5.12.4",
-    "astro-icon": "^1.1.5",
-    "daisyui": "^5.0.50",
-    "tailwindcss": "^4.1.11"
-  }
+    "name": "paulstenn",
+    "type": "module",
+    "version": "0.0.1",
+    "packageManager": "pnpm@10.9.0",
+    "scripts": {
+        "dev": "astro dev & chromium-browser http://localhost:4321 2> /dev/null",
+        "build": "astro build",
+        "preview": "astro preview",
+        "astro": "astro"
+    },
+    "dependencies": {},
+    "devDependencies": {
+        "@tailwindcss/typography": "^0.5.16",
+        "@tailwindcss/vite": "^4.1.11",
+        "astro": "^5.12.4",
+        "astro-icon": "^1.1.5",
+        "daisyui": "^5.0.50",
+        "sharp": "^0.34.3",
+        "tailwindcss": "^4.1.11"
+    }
 }
